--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <source src="https://ak9.picdn.net/shutterstock/videos/23197009/preview/stock-footage-romantic-red-rose-flower-petals-with-place-for-text-backdrop-for-st-valentine-s-day-mother-s-day.webm" type="video/webm">
       <source src="https://ak9.picdn.net/shutterstock/videos/23197009/preview/stock-footage-romantic-red-rose-flower-petals-with-place-for-text-backdrop-for-st-valentine-s-day-mother-s-day.mp4" type="video/mp4">
     </video>
-    <h2 style="font-size: 206px;">JAAN-E-USAMA</h2>
+    <h2 style="display: inline-block;
+    font-size: 206px;transform-origin: 0 0;"><span>JAAN-E-USAMA</span></h2>
   </div>
   
 </body>
