--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <source src="https://ak9.picdn.net/shutterstock/videos/23197009/preview/stock-footage-romantic-red-rose-flower-petals-with-place-for-text-backdrop-for-st-valentine-s-day-mother-s-day.mp4" type="video/mp4">
     </video>
     <h2 style="display: inline-block;
-    font-size: 206px;transform-origin: 0 0;"><span>JAAN-E-USAMA</span></h2>
+    font-size: 206px;transform-origin: 0 0;"><span>Sidra</span></h2>
+    <h1>🌹 </h1>
   </div>
   
 </body>
