--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 </head>
 <body>
-
+  <footer style="margin-top:1150px ;margin-left: 220px;">
+    <h2>made with ❤️ by usamasfolio</h2>
+  </footer>
   <div class="banner">
     <video autoplay muted loop>
       <source src="https://ak9.picdn.net/shutterstock/videos/23197009/preview/stock-footage-romantic-red-rose-flower-petals-with-place-for-text-backdrop-for-st-valentine-s-day-mother-s-day.webm" type="video/webm">
@@ -18,6 +20,6 @@
     <h2 style="display: inline-block;
     font-size: 106px;transform-origin: 0 0;"><span>Jaan-E-Usama</span></h2>
   </div>
-  
+
 </body>
 </html>
