--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <footer style="margin-top:1150px ;margin-left: 220px;">
-    <h2>made with ❤️ by usamasfolio</h2>
+    <h2>made with ❤️ by usamasfolio-scroll down </h2>
   </footer>
   <div class="banner">
     <video autoplay muted loop>
