--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>name</title>
-  <link rel="stylesheet" href="main.css">
-
-</head>
-<body>
-  <footer style="margin-top:1150px ;margin-left: 220px;">
-    <h2>made with ❤️ by usamasfolio-scroll down </h2>
-  </footer>
-  <div class="banner">
-    <video autoplay muted loop>
-      <source src="https://ak9.picdn.net/shutterstock/videos/23197009/preview/stock-footage-romantic-red-rose-flower-petals-with-place-for-text-backdrop-for-st-valentine-s-day-mother-s-day.webm" type="video/webm">
-      <source src="https://ak9.picdn.net/shutterstock/videos/23197009/preview/stock-footage-romantic-red-rose-flower-petals-with-place-for-text-backdrop-for-st-valentine-s-day-mother-s-day.mp4" type="video/mp4">
-    </video>
-    <h2 style="display: inline-block;
-    font-size: 166px;transform-origin: 0 0;"><span>Jaan-E-Usama</span></h2>
-  </div>
-
-</body>
-</html>
+<div class="container">
+	<div class="glass"></div>
+	<div class="thorns">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+	<div class="glow"></div>
+	<div class="rose-leaves">
+		<div></div>
+		<div></div>
+	</div>
+	<div class="rose-petals">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+	<div class="sparkles">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+</div>
